--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr"> <!-- précise la langue du contenu de la page -->
 <head>
+    <!-- Jeu de caractères utilisé pour l'encodage du fichier HTML -->
     <meta charset="UTF-8">
-    <title>Title</title>
+
+    <!-- Bloque le zoom automatique sur smartphones -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Titre de la page -->
+    <title>Enzo Litterio | Curriculum vitæ</title>
+
+    <!-- Auteur -->
+    <meta name="author" content="Enzo Litterio">
+
+    <!-- Favicons : icône de la page dans plusieurs tailles et formats
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+    <link rel="manifest" href="./site.webmanifest"> -->
 </head>
 <body>
-
+<img src="images/njvl9nbc.bmp" alt="Ma photo de CV" height="200" width="135">
+<h1>Enzo Litterio</h1>
+<p> </p>
 </body>
 </html>
