ajouter des titres h2 pour chaque catégorie

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 <body>
 <img src="images/njvl9nbc.bmp" alt="Ma photo de CV" height="200" width="135">
 <h1>Enzo Litterio</h1>
-<p> </p>
+<h2>Mes experiences professionel</h2>
+<h2>Mes compétences</h2>
+<h2>Ma formation</h2>
+<h2></h2>
 </body>
 </html>
