mettre une liste à puce de réference dans l'en-tête Supprimer une image

--- a/index.html
+++ b/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="fr"> <!-- précise la langue du contenu de la page -->
-<head>
-    <!-- Jeu de caractères utilisé pour l'encodage du fichier HTML -->
-    <meta charset="UTF-8">
+    <head>
+        <!-- Jeu de caractères utilisé pour l'encodage du fichier HTML -->
+        <meta charset="UTF-8">
 
-    <!-- Bloque le zoom automatique sur smartphones -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Bloque le zoom automatique sur smartphones -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Titre de la page -->
-    <title>Enzo Litterio | Curriculum vitæ</title>
+        <!-- Titre de la page -->
+        <title>Enzo Litterio | Curriculum vitæ</title>
 
-    <!-- Auteur -->
-    <meta name="author" content="Enzo Litterio">
+        <!-- Auteur -->
+        <meta name="author" content="Enzo Litterio">
 
-    <!-- Favicons : icône de la page dans plusieurs tailles et formats
-    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-    <link rel="manifest" href="./site.webmanifest"> -->
-</head>
-<body>
-<img src="images/njvl9nbc.bmp" alt="Ma photo de CV" height="200" width="135">
-<h1>Enzo Litterio</h1>
-<h2>Mes experiences professionel</h2>
-<h2>Mes compétences</h2>
-<h2>Ma formation</h2>
-<h2></h2>
-</body>
+        <!-- Favicons : icône de la page dans plusieurs tailles et formats
+        <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+        <link rel="manifest" href="./site.webmanifest"> -->
+    </head>
+
+    <body>
+        <ul>
+            <li><a href="#experiences"> Mes experiences</a></li>
+            <li><a href="#competences"> Mes compétences</a></li>
+            <li><a href="#formation">Ma formation</a></li>
+        </ul>
+        <h1>Enzo Litterio</h1>
+        <h2 id="experiences">Mes experiences professionnelles</h2>
+        <h2 id="competences">Mes compétences</h2>
+        <h2 id="formation">Ma formation</h2>
+    </body>
 </html>
