Insérer un en-tête, un contenu et un pied de page

--- a/index.html
+++ b/index.html
@@ -21,14 +21,21 @@
     </head>
 
     <body>
-        <ul>
-            <li><a href="#experiences"> Mes experiences</a></li>
-            <li><a href="#competences"> Mes compétences</a></li>
-            <li><a href="#formation">Ma formation</a></li>
-        </ul>
-        <h1>Enzo Litterio</h1>
-        <h2 id="experiences">Mes experiences professionnelles</h2>
-        <h2 id="competences">Mes compétences</h2>
-        <h2 id="formation">Ma formation</h2>
+        <header>
+            <ul>
+                <li><a href="#experiences"> Mes experiences</a></li>
+                <li><a href="#competences"> Mes compétences</a></li>
+                <li><a href="#formation">Ma formation</a></li>
+            </ul>
+        </header>
+        <main>
+            <h1>Enzo Litterio</h1>
+            <h2 id="experiences">Mes experiences professionnelles</h2>
+            <h2 id="competences">Mes compétences</h2>
+            <h2 id="formation">Ma formation</h2>
+        </main>
+        <footer>
+            <p>2022-Enzo Litterio | <a href="mailto:enzo.litterio@divtec.ch"></a></p>
+        </footer>
     </body>
 </html>
