Mettre une image dans mon en-tête

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <body>
         <header>
+            <a href="./images/photoCV.jpg"> <img src="./images/photoCV.jpg" alt="Ma photo de mon CV"></a>
             <ul>
                 <li><a href="#experiences"> Mes experiences</a></li>
                 <li><a href="#competences"> Mes compétences</a></li>
@@ -35,7 +36,7 @@
             <h2 id="formation">Ma formation</h2>
         </main>
         <footer>
-            <p>2022-Enzo Litterio | <a href="mailto:enzo.litterio@divtec.ch"></a></p>
+            <p>©2022-Enzo Litterio | <a href="mailto:enzo.litterio@divtec.ch"></a></p>
         </footer>
     </body>
 </html>
