Ajouter des listes à puce dans chaque catégorie

--- a/index.html
+++ b/index.html
@@ -31,9 +31,24 @@
         </header>
         <main>
             <h1>Enzo Litterio</h1>
+            <p>Apprenti à l'EMT</p>
             <h2 id="experiences">Mes experiences professionnelles</h2>
+            <ul>
+                <li><p><strong>En 2017</strong> fais de cour de programmation sur lego Mindstorm</p></li>
+                <li>Code parfois en Python pour tester des choses</li>
+            </ul>
             <h2 id="competences">Mes compétences</h2>
+                <ul>
+                    <li>C++</li>
+                    <li>Python</li>
+                    <li>HTML / CSS</li>
+                    <li>Dessin</li>
+                </ul>
             <h2 id="formation">Ma formation</h2>
+                <ul>
+                    <li><strong>2010-2019</strong> école primaire de Courtételle</li>
+                    <li><strong>2019-2022</strong> collège de Delémont</li>
+                </ul>
         </main>
         <footer>
             <p>©2022-Enzo Litterio | <a href="mailto:enzo.litterio@divtec.ch"></a></p>
