--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <!-- Auteur -->
         <meta name="author" content="Enzo Litterio">
 
-        <!-- Favicons : icône de la page dans plusieurs tailles et formats
-        <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-        <link rel="manifest" href="./site.webmanifest"> -->
+        <!-- Favicons : icône de la page dans plusieurs tailles et formats -->
+        <link rel="apple-touch-icon" sizes="180x180" href="./icone/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./icone/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./icone/favicon-16x16.png">
+        <link rel="manifest" href="./icone/site.webmanifest">
     </head>
 
     <body>
