--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </ul>
         </main>
         <footer>
-            <p>©2022-Enzo Litterio | <a href="mailto:enzo.litterio@divtec.ch"></a></p>
+            <p>©2022-Enzo Litterio | <a href="mailto:enzo.litterio@divtec.ch"> enzo.litterio@divtec.ch</a></p>
         </footer>
     </body>
 </html>
