changer un paragraphe

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p>Apprenti à l'EMT</p>
             <h2 id="experiences">Mes experiences professionnelles</h2>
             <ul>
-                <li><p><strong>En 2017</strong> fais de cour de programmation sur lego Mindstorm</p></li>
+                <li><p><strong>En 2017</strong> fais de cour de programmation sur lego Mindstorms</p></li>
                 <li>Code parfois en Python pour tester des choses</li>
             </ul>
             <h2 id="competences">Mes compétences</h2>
