--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <link rel="icon" type="image/png" sizes="32x32" href="./icone/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="./icone/favicon-16x16.png">
         <link rel="manifest" href="./icone/site.webmanifest">
+
+        <!-- CSS -->
+        <link rel="stylesheet" href="./css/main.css">
     </head>
 
     <body>
