changer la police d'écriture

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <body>
         <header>
-            <a href="./images/photoCV.jpg"> <img src="./images/photoCV.jpg" alt="Ma photo de mon CV"></a>
+            <a href="./images/photoCV.jpg"> <img src="./images/photoCV.jpg" alt="Ma photo"></a>
             <ul>
                 <li><a href="#experiences"> Mes experiences</a></li>
                 <li><a href="#competences"> Mes compétences</a></li>
@@ -37,7 +37,7 @@
             <p>Apprenti à l'EMT</p>
             <h2 id="experiences">Mes experiences professionnelles</h2>
             <ul>
-                <li><p><strong>En 2017</strong> fais de cour de programmation sur lego Mindstorms</p></li>
+                <li><strong>En 2017</strong> fais de cour de programmation sur lego Mindstorms</li>
                 <li>Code parfois en Python pour tester des choses</li>
             </ul>
             <h2 id="competences">Mes compétences</h2>
