ajustement des polices

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <link rel="manifest" href="./icone/site.webmanifest">
 
         <!-- CSS -->
+        <link rel="stylesheet" href="./css/fonts.css">
         <link rel="stylesheet" href="./css/main.css">
+
     </head>
 
     <body>
