lien qui renvoie sur un autre site

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </header>
         <main>
             <h1>Enzo Litterio</h1>
-            <p>Apprenti à l'EMT</p>
+            <p>Apprenti à l'<a href="https://media.tenor.com/x8v1oNUOmg4AAAAM/rickroll-roll.gif">EMT</a></p>
             <h2 id="experiences">Mes experiences professionnelles</h2>
             <ul>
                 <li><strong>En 2017</strong> fais de cour de programmation sur lego Mindstorms</li>
