--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </main>
 
         <footer>
-            <p>©2022-Enzo Litterio |<a href="mailto:enzo.litterio@divtec.ch">enzo.litterio@divtec.ch</a></p>
+            <p>©2022-Enzo Litterio |<a href="mailto:enzo.litterio@divtec.ch?subject=contacter">enzo.litterio@divtec.ch</a></p>
         </footer>
     </body>
 </html>
