Changer le nom d'une photo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <body>
         <header>
-            <a href="./images/photoCV.jpg"><img src="./images/photoCV.jpg" alt="Ma photo"></a>
+            <a href="images/photo-cv.jpg"><img src="images/photo-cv.jpg" alt="Ma photo"></a>
             <ul>
                 <li><a href="#experiences">Mes experiences</a></li>
                 <li><a href="#competences">Mes compétences</a></li>
